crates/analyzer/tests/snapshots/errors__call_balance_of_with_2_args.snap
---
source: crates/analyzer/tests/errors.rs
expression: "error_string(\"[snippet]\", &src)"
---
error: `balance_of` expects 1 argument, but 2 were provided
   ┌─ src/evm.fe:52:15
   │
52 │ pub unsafe fn balance_of(_ addr: address) -> u256 {
   │               ^^^^^^^^^^ expects 1 argument
   │
   ┌─ [snippet]:3:33
   │
 3 │   unsafe { std::evm::balance_of(address(0), 2) }
   │                                 ----------  - supplied 2 arguments


